evnts page banner alignment fixed in mobile - issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1684,6 +1684,10 @@ fieldset{
    margin-left: 15px;
    @include breakpoint($mobile){
      width:94%;
+     .block-close{
+       margin-left: -37px;
+       width:53px;
+     }
    }
    
   .my-voice-columns{
